updated countdown for diss

--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -32,7 +32,7 @@
 	</body>
 
 	<script>
-		var countDownDate = new Date("May 7, 2020 14:00:00").getTime();  
+		var countDownDate = new Date("June 04, 2020 14:00:00").getTime();  
 		time();
 
 		var x = setInterval(time, 1000);
@@ -45,7 +45,7 @@
 
 			if (delta < 0) {
 				clearInterval(x);
-				document.getElementById("time").innerHTML = "LORD, I HOPE YOU'VE HANDED IT IN!";
+				document.getElementById("time").innerHTML = "It's done, now relax and have a beer.";
 			} else {
 				var dispPrev = true;
 
