--- a/brian/index.html
+++ b/brian/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Brian</title>
-        <link rel="icon" type="image/ico" href="/brian/brian.ico">
+        <link rel="icon" type="image/ico" href="/brian/tbrian.ico">
         <style>
             body {
                 background: #9e9e9e;
