--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	<body>
 		<h1 class="center nice-font">Jake Gore</h1>
-		<p class="center sans-serif">A final year Computer Science student at the University of Hull.</p>
+		<p class="center sans-serif">Junior Software Engineer at UNiDAYS - First Class Computer Science graduate.</p>
 		<div class="center">
 			<a href="https://www.linkedin.com/in/jakegore" title="Linkedin Profile Link">
 				<svg class="center linkedin">
