--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<title>Jake Gore // Software Engineer</title>
 		<meta name="author" content="Jake Gore">
-		<meta name="description" content="The online home of Jake Gore, a computer science student at the University of Hull.">
+		<meta name="description" content="The online home of Jake Gore, software engineer, First Class University of Hull Computer Science graduate.">
 
 		<style type="text/css">
 			.nice-font {
