--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 	<body>
 		<h1 class="center nice-font">Jake Gore</h1>
-		<p class="center sans-serif">Software Engineer at UNiDAYS - First Class Computer Science graduate.</p>
+		<p class="center sans-serif">Software Engineer at Much Better Adventures - First Class Computer Science graduate.</p>
 		<div class="center">
 			<a href="https://www.linkedin.com/in/jakegore" title="Linkedin Profile Link">
 				<svg class="center linkedin">
