--- a/climb/index.html
+++ b/climb/index.html
@@ -256,7 +256,7 @@
 			for (const [_, c] of loadedEntries) {
 				addClimb(c.latlng, c.options);
 			}
-			setId(loadedClimbs.length);
+			setId(loadedEntries.length);
 		}
 
 		function addClimb(latlng, options) {
