--- a/Countdown/heeellllooooneeeeeeeee.html
+++ b/Countdown/heeellllooooneeeeeeeee.html
@@ -36,7 +36,7 @@
 
 			if (delta < 0) {
 				clearInterval(x);
-				document.getElementById("time").innerHTML = "LORD, I HOPE YOU'RE ON TIME!";
+				document.getElementById("time").innerHTML = "LORD, I HOPE THEY ACTUALLY RELEASED THEM ON TIME!";
 			} else {
 				var dispPrev = true;
 
