--- a/dotwatching.html
+++ b/dotwatching.html
@@ -1,1 +1,1 @@
-<iframe src="https://en.follow.me.cz/tracking-en/?race_id=456&amp;lang=en_GB&amp;embedded" title="Spy on Guy!"></iframe>
+<iframe src="https://en.follow.me.cz/tracking-en/?race_id=456&amp;lang=en_GB&amp;embedded" title="Spy on Guy!" height="100%" width="100%"></iframe>
