--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Jake Gore // Software Engineer</title>
 		<meta name="author" content="Jake Gore">
 		<meta name="description" content="The online home of Jake Gore, software engineer, First Class University of Hull Computer Science graduate.">
+		<meta name="viewport" content="width=device-width, initial-scale=0.7">
 
 		<style type="text/css">
 			.nice-font {
